Made it configuratable with two urls. On one the PUT action is disallowed